# py-web-team-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.qodo/: history.sqlite
app/: config.py  main.py  schemas.py  settings.py  test.py
app/database/: connection.py  models.py
app/repository/: comments.py  images.py  ratings.py  users.py
app/routers/: admin_panel.py  auth.py  comments.py  images.py  ratings.py  routers.py  search.py  users.py
app/services/: __init__.py  auth_service.py  comment_service.py  email_service.py  image_service.py  password_service.py  qrcode_service.py  rating_service.py  user_service.py
app/services/security/: auth_service.py  secure_password.py
app/templates/: email_template.html  index.html  reset_password_template.html
app/utils/: logger.py
migrations/: env.py
migrations/versions/: 0b5fa8e9a66a_added_new_role.py  25a7eb98b3e7_initial_migration.py  27cc5504713c_initial_migration.py  3bdf665673dc_added_new_role.py  a36d0ba96bf1_fix_role_user_nullable_false.py  cd429646aa0e_initial_migration.py  dc8f94670dfe_initial_migration.py  e6b6c099b034_add_public_id_to_image.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619  pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
tests/: conftest.py  test_auth.py  test_auth_e2e.py  test_auth_scope.py  test_comment.py  test_exceptions.py  test_images.py  test_jwt_manager.py  test_rating_image.py  test_redis.py  test_roles.py  test_secure_passw.py  test_serch.py  test_user_repo.py
(+14 files in other folders)
