[tool.poetry]
name = "py-web-team-project"
version = "0.1.0"
description = "FastAPI project"
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic-settings = "^2.7.1"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
pytest = "^8.3.4"
python-jose = "^3.3.0"
types-python-jose = "^3.3.4.20240106"
pytz = "^2025.1"
types-pytz = "^2025.1.0.20250204"
pytest-asyncio = "^0.25.3"
cloudinary = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
